k8s/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: python-app
  namespace: lab
  labels:
    app: python-app
spec:
  replicas: 1
  selector: 
    matchLabels:
      app: python-app
  template:
    metadata:
      labels:
        app: python-app
    spec:
      containers:
      - name: python-app
        image: iagouvea/python-app:1.0
        ports:
        - containerPort: 5000
