k8s/ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  namespace: lab
  name: python-app-ingress
spec:
  ingressClassName: nginx
  rules:
  - host: python-app.local
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: python-app-svc
            port: 
              number: 8080
